@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: February 25, 2009</p>
+      <p>Last Updated: February 27, 2009</p>
     </td>
   </tr>
 </table>
@@ -1350,6 +1350,7 @@ nuttx-0.4.2 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	    save and restore.
 	  - Corrected vector intialization logic
 	* ez80Acclaim!: Corrected overflow problem in calculation of baud rate divisor
+	* ez80Acclaim!: Fixed GPIO pin configuration get serial output
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
