@@ -634,6 +634,7 @@
 	    save and restore.
 	  - Corrected vector intialization logic
 	* ez80Acclaim!: Corrected overflow problem in calculation of baud rate divisor
+	* ez80Acclaim!: Fixed GPIO pin configuration get serial output
 
 
 
